--- a/index.html
+++ b/index.html
@@ -1,60 +1,338 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Promo Website</title>
-    <link rel="stylesheet" href="styles.css">
-    <!-- Используем библиотеку GSAP для анимации -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Promo</title>
+  <style>
+    :root{
+      --bg:#0f1724; --card:#0b1220; --accent:#4f46e5; --muted:#94a3b8; --glass: rgba(255,255,255,0.04);
+      --radius:14px; --maxw:1100px;
+      --ease:cubic-bezier(.2,.9,.3,1);
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;}
+    body{
+      margin:0; font-family:Inter, ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;
+      background: linear-gradient(180deg,var(--bg) 0%, #071226 100%); color:#e6eef8; -webkit-font-smoothing:antialiased;
+      overflow-x:hidden;
+    }
+
+    header{position:fixed;top:0;left:0;right:0;backdrop-filter: blur(6px); background:linear-gradient(180deg, rgba(10,14,20,0.6), rgba(10,14,20,0.2));
+      border-bottom:1px solid rgba(255,255,255,0.03); z-index:60}
+    .container{max-width:var(--maxw);margin:0 auto;padding:24px}
+    nav{display:flex;align-items:center;gap:18px}
+    .logo{font-weight:700;letter-spacing:0.4px}
+    .navlinks{margin-left:auto;display:flex;gap:12px}
+    .navlinks a{color:var(--muted);text-decoration:none;padding:8px 12px;border-radius:10px;transition:all .22s var(--ease)}
+    .navlinks a.active, .navlinks a:hover{background:var(--glass); color: #fff; transform:translateY(-2px)}
+
+    main{padding-top:84px}
+    .page{min-height:calc(100vh - 84px);padding:60px 0;display:none;opacity:0;transform:translateY(20px);transition:opacity .5s var(--ease), transform .5s var(--ease)}
+    .page.active{display:block;opacity:1;transform:none}
+
+    .hero{display:grid;grid-template-columns:1fr 420px;gap:40px;align-items:center}
+    .hero-left h1{font-size:40px;margin:0 0 18px;line-height:1.02}
+    .typed{color:var(--accent);font-weight:700}
+    .hero p{color:var(--muted);margin:0 0 18px}
+    .cta{display:flex;gap:12px}
+    .btn{background:linear-gradient(90deg,var(--accent),#7c3aed);padding:12px 18px;border-radius:12px;color:#fff;text-decoration:none;box-shadow:0 6px 20px rgba(79,70,229,0.12);transition:transform .18s var(--ease)}
+    .btn:active{transform:translateY(1px)}
+
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:var(--radius);padding:22px;box-shadow:0 6px 30px rgba(6,8,15,0.6);border:1px solid rgba(255,255,255,0.03)}
+    .feature-list{display:flex;flex-direction:column;gap:12px}
+    .feature{display:flex;gap:12px;align-items:center}
+    .dot{width:10px;height:10px;border-radius:50%;background:linear-gradient(180deg,var(--accent),#7c3aed)}
+
+    .grid{display:grid;grid-template-columns:repeat(3,1fr);gap:20px;margin-top:30px}
+    .grid .grid-card{padding:18px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03);transform:translateY(30px);opacity:0;transition:all .6s var(--ease)}
+    .grid .grid-card.show{transform:none;opacity:1}
+    .grid h3{margin:0 0 8px}
+    .muted{color:var(--muted);font-size:14px}
+
+    .parallax{position:fixed;right:-10%;top:10vh;width:60vw;height:60vh;pointer-events:none;opacity:0.08;z-index:0}
+    .blob{width:100%;height:100%;background:radial-gradient(circle at 30% 30%, #4f46e5, #0ea5a1 60%);filter:blur(80px);border-radius:50%}
+
+    .reveal{opacity:0;transform:translateY(20px);transition:opacity .6s var(--ease), transform .6s var(--ease)}
+    .reveal.visible{opacity:1;transform:none}
+
+    .pricing{display:flex;gap:18px}
+    .plan{flex:1;padding:18px;border-radius:12px;background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border:1px solid rgba(255,255,255,0.03)}
+    .price{font-size:28px;font-weight:700}
+
+    .about-grid{display:grid;grid-template-columns:1fr 1fr;gap:30px;align-items:center}
+
+    .modal-backdrop{position:fixed;inset:0;background:rgba(2,6,23,0.6);display:none;align-items:center;justify-content:center;z-index:80}
+    .modal-backdrop.show{display:flex}
+    .modal{width:100%;max-width:680px;background:linear-gradient(180deg,#091421, #071022);padding:22px;border-radius:14px;border:1px solid rgba(255,255,255,0.03)}
+    .field{display:flex;flex-direction:column;gap:6px;margin-bottom:12px}
+    input,textarea{background:transparent;border:1px solid rgba(255,255,255,0.05);padding:10px;border-radius:8px;color:#e6eef8}
+    .submit{background:linear-gradient(90deg,var(--accent),#7c3aed);padding:12px;border-radius:10px;border:none;color:#fff}
+
+    footer{padding:36px 0;color:var(--muted);font-size:14px}
+
+    .cursor{position:fixed;top:0;left:0;width:18px;height:18px;border-radius:50%;pointer-events:none;z-index:9999;transform:translate(-50%,-50%);transition:transform .12s linear, background-color .12s}
+    .cursor.big{transform:translate(-50%,-50%) scale(2.6);opacity:0.9}
+
+    @media (max-width:980px){.hero{grid-template-columns:1fr;}.grid{grid-template-columns:repeat(2,1fr)}.parallax{display:none}}
+    @media (max-width:640px){.grid{grid-template-columns:1fr}.navlinks{display:none}.hero-left h1{font-size:28px}}
+
+  </style>
 </head>
 <body>
-<!-- Главная страница -->
-<div id="home-page">
-    <header>
-        <nav>
-            <ul>
-                <li><a href="#about-us">О нас</a></li>
-                <li><a href="#services">Наши услуги</a></li>
-                <li><a href="#contact">Связаться с нами</a></li>
+  <div class="parallax" aria-hidden="true"><div class="blob"></div></div>
+  <div class="cursor" id="cursor" aria-hidden="true"></div>
+
+  <header>
+    <div class="container">
+      <nav>
+        <div class="logo">Promo<span style="color:var(--accent)">X</span></div>
+        <div class="navlinks" id="navlinks">
+          <a href="#home" data-route="#home" class="active">Главная</a>
+          <a href="#features" data-route="#features">Возможности</a>
+          <a href="#pricing" data-route="#pricing">Тарифы</a>
+          <a href="#about" data-route="#about">О нас</a>
+          <a href="#contact" id="open-contact">Контакты</a>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <div id="home" class="page active">
+      <div class="container">
+        <div class="hero">
+          <div class="hero-left">
+            <h1>Создавайте заметные лендинги, которые <span class="typed" id="typed"></span></h1>
+            <p>Адаптивный промо-сайт с современными эффектами на чистом HTML, CSS и JavaScript. Быстро, аккуратно и без фреймворков.</p>
+            <div class="cta">
+              <a class="btn" href="#features">Узнать больше</a>
+              <a class="btn" id="btn-contact" href="#contact">Связаться</a>
+            </div>
+
+            <div class="grid reveal" style="margin-top:24px">
+              <div class="grid-card">
+                <h3>Быстрый старт</h3>
+                <div class="muted">Шаблон одной страницы или навигация по хешу — вы выбираете.</div>
+              </div>
+              <div class="grid-card">
+                <h3>Анимации</h3>
+                <div class="muted">Плавные переходы, парраллакс и эффект печати без библиотек.</div>
+              </div>
+              <div class="grid-card">
+                <h3>Модульность</h3>
+                <div class="muted">Легко настраиваемые секции и стили.</div>
+              </div>
+            </div>
+          </div>
+
+          <aside class="card">
+            <h4 style="margin:0 0 8px">Сферы использования</h4>
+            <div class="feature-list">
+              <div class="feature"><div class="dot"></div><div><strong>Стартапы</strong><div class="muted">Привлекайте первые пользователей</div></div></div>
+              <div class="feature"><div class="dot"></div><div><strong>Продукты</strong><div class="muted">Демонстрация фич и тарификации</div></div></div>
+              <div class="feature"><div class="dot"></div><div><strong>Презентации</strong><div class="muted">Красивые слайды и секции</div></div></div>
+            </div>
+
+            <div style="margin-top:20px">
+              <strong>Контакты</strong>
+              <div class="muted">hello@promox.example</div>
+              <div style="margin-top:12px"><a class="btn" id="card-contact" href="#contact">Написать</a></div>
+            </div>
+          </aside>
+        </div>
+      </div>
+    </div>
+
+    <div id="features" class="page">
+      <div class="container">
+        <h2>Возможности</h2>
+        <p class="muted">Ниже — демонстрация анимаций и интерактивных блоков.</p>
+
+        <section style="margin-top:24px">
+          <div class="card reveal">
+            <h3>Параллакс фон</h3>
+            <p class="muted">Фон мягко двигается при скролле, создавая глубину.</p>
+            <div style="height:160px;background:linear-gradient(90deg,#071334, #0b1628);border-radius:10px;margin-top:12px;display:flex;align-items:center;justify-content:center">Визуальный блок</div>
+          </div>
+
+          <div class="card reveal" style="margin-top:18px">
+            <h3>Scroll reveal</h3>
+            <p class="muted">Элементы плавно появляются при прокрутке — IntersectionObserver.</p>
+            <div style="height:100px;margin-top:12px;display:flex;gap:12px;align-items:center">
+              <div style="flex:1;height:80px;background:linear-gradient(90deg,#07263a,#083047);border-radius:8px"></div>
+              <div style="flex:1;height:80px;background:linear-gradient(90deg,#08273d,#083145);border-radius:8px"></div>
+            </div>
+          </div>
+        </section>
+      </div>
+    </div>
+
+    <div id="pricing" class="page">
+      <div class="container">
+        <h2>Тарифы</h2>
+        <p class="muted">Плата один раз или по подписке — выберите удобный вариант.</p>
+        <div class="pricing reveal" style="margin-top:20px">
+          <div class="plan card">
+            <h3>Starter</h3>
+            <div class="price">$0 <span class="muted">/ forever</span></div>
+            <div class="muted" style="margin-top:10px">Шаблон и документация</div>
+          </div>
+          <div class="plan card">
+            <h3>Pro</h3>
+            <div class="price">$49 <span class="muted">/ one-time</span></div>
+            <div class="muted" style="margin-top:10px">Исходники и приоритетный саппорт</div>
+          </div>
+          <div class="plan card">
+            <h3>Agency</h3>
+            <div class="price">$199 <span class="muted">/ year</span></div>
+            <div class="muted" style="margin-top:10px">Лицензии для клиентов и консультации</div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div id="about" class="page">
+      <div class="container">
+        <h2>О нас</h2>
+        <div class="about-grid">
+          <div>
+            <p class="muted">Мы — небольшая команда фронтенд-инженеров, которые любят чистый код, оптимизацию и аккуратные визуальные решения. Этот шаблон показывает, как получить эффектный сайт без внешних библиотек.</p>
+            <ul style="margin-top:12px;color:var(--muted)">
+              <li>чистый JS + CSS (ES6)</li>
+              <li>легкая кастомизация</li>
+              <li>доступная документация</li>
             </ul>
-        </nav>
-    </header>
-    <section id="hero-section">
-        <h1>Добро пожаловать!</h1>
-        <p>Это наш промо-сайт.</p>
-    </section>
-</div>
+          </div>
+          <div>
+            <div class="card" style="height:200px;display:flex;align-items:center;justify-content:center">Команда</div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-<!-- Страница О нас -->
-<div id="about-us">
-    <h2>О нашей компании</h2>
-    <p>Мы предоставляем лучшие услуги в отрасли вот уже много лет.</p>
-</div>
+  </main>
 
-<!-- Страница Наши услуги -->
-<div id="services">
-    <h2>Наши услуги</h2>
-    <ul>
-        <li>Разработка программного обеспечения</li>
-        <li>Дизайн интерфейсов</li>
-        <li>Поддержка клиентов</li>
-    </ul>
-</div>
+  <div class="modal-backdrop" id="modal">
+    <div class="modal" role="dialog" aria-modal="true" aria-labelledby="modal-title">
+      <h3 id="modal-title">Связаться с нами</h3>
+      <p class="muted">Отправьте короткое сообщение — мы ответим в рабочее время.</p>
+      <div style="margin-top:10px">
+        <div class="field"><label>Имя</label><input id="name" /></div>
+        <div class="field"><label>Почта</label><input id="email" type="email"/></div>
+        <div class="field"><label>Сообщение</label><textarea id="message" rows="4"></textarea></div>
+        <div style="display:flex;gap:10px;justify-content:flex-end"><button class="submit" id="send">Отправить</button><button class="submit" id="close-modal" style="background:transparent;border:1px solid rgba(255,255,255,0.06)">Закрыть</button></div>
+      </div>
+    </div>
+  </div>
 
-<!-- Контактная информация -->
-<div id="contact">
-    <h2>Свяжитесь с нами</h2>
-    <address>
-        Адрес: Москва, ул. Красная площадь, д. 1<br>
-        Телефон: +7 (495) 123-45-67
-    </address>
-</div>
+  <script>
+    const pages = Array.from(document.querySelectorAll('.page'));
+    const navlinks = document.querySelectorAll('.navlinks a');
 
-<script>
-// Анимация заголовков при прокрутке
-window.onscroll = function() {
-    gsap.to("#hero-section h1", { y: "-20%", opacity: 0 });
-};
-</script>
+    function showPage(hash){
+      const target = hash || '#home';
+      pages.forEach(p=>{p.classList.remove('active')});
+      const el = document.querySelector(target);
+      if(el) el.classList.add('active');
+      navlinks.forEach(a=> a.classList.toggle('active', a.getAttribute('href')===target));
+      window.scrollTo({top:0,behavior:'smooth'});
+    }
+    window.addEventListener('hashchange',()=> showPage(location.hash));
+    showPage(location.hash || '#home');
+
+    (function(){
+      const words = ['увлекательнее','быстрее','продающее'];
+      const el = document.getElementById('typed');
+      let w = 0, i = 0, deleting=false;
+      function tick(){
+        const word = words[w];
+        if(!deleting){
+          el.textContent = word.slice(0,i+1);
+          i++;
+          if(i===word.length){ deleting=true; setTimeout(tick,1200); return; }
+        } else {
+          el.textContent = word.slice(0,i-1);
+          i--;
+          if(i===0){ deleting=false; w=(w+1)%words.length; }
+        }
+        setTimeout(tick, deleting?80:90);
+      }
+      tick();
+    })();
+
+    (function(){
+      const blob = document.querySelector('.parallax');
+      if(!blob) return;
+      window.addEventListener('scroll',()=>{
+        const y = window.scrollY;
+        blob.style.transform = `translateY(${y*0.15}px)`;
+        blob.style.opacity = Math.max(0.05, 0.2 - y/3000);
+      },{passive:true});
+    })();
+
+    (function(){
+      const obs = new IntersectionObserver((entries)=>{
+        entries.forEach(e=>{
+          if(e.isIntersecting){
+            e.target.classList.add('visible');
+            // reveal grid cards inside
+            e.target.querySelectorAll('.grid-card')?.forEach((c,idx)=> setTimeout(()=>c.classList.add('show'), idx*90));
+            obs.unobserve(e.target);
+          }
+        })
+      },{threshold:0.12});
+      document.querySelectorAll('.reveal').forEach(n=>obs.observe(n));
+    })();
+
+    document.getElementById('navlinks').addEventListener('click', (e)=>{
+      const a = e.target.closest('a');
+      if(!a) return;
+      if(a.getAttribute('href')==='#contact' || a.id==='open-contact' || a.id==='btn-contact' || a.id==='card-contact'){
+        e.preventDefault(); openModal();
+        return;
+      }
+    });
+
+    const modal = document.getElementById('modal');
+    function openModal(){ modal.classList.add('show'); document.body.style.overflow='hidden'; }
+    function closeModal(){ modal.classList.remove('show'); document.body.style.overflow=''; }
+    document.getElementById('close-modal').addEventListener('click', closeModal);
+    document.getElementById('send').addEventListener('click', ()=>{
+      const name = document.getElementById('name').value || '—';
+      const email = document.getElementById('email').value || '—';
+      const message = document.getElementById('message').value || '—';
+      // Простая валидация
+      if(!email.includes('@')){ alert('Введите корректную почту'); return; }
+      // Здесь можно отправить на сервер через fetch. Пока просто показываем успех.
+      alert(`Спасибо, ${name}!\nМы получили ваше сообщение.`);
+      closeModal();
+    });
+    modal.addEventListener('click', (e)=>{ if(e.target===modal) closeModal(); });
+
+    (function(){
+      const cursor = document.getElementById('cursor');
+      let mx=0,my=0;
+      window.addEventListener('mousemove', (e)=>{ mx=e.clientX; my=e.clientY; cursor.style.left = mx+'px'; cursor.style.top = my+'px'; });
+      // enlarge on interactive elements
+      ['a','button','.btn','.card','input','textarea'].forEach(sel=>{
+        document.addEventListener('mouseover', (e)=>{ if(e.target.closest(sel)) cursor.classList.add('big'); });
+        document.addEventListener('mouseout',  (e)=>{ if(e.target.closest(sel)) cursor.classList.remove('big'); });
+      });
+    })();
+
+    if(('ontouchstart' in window) || navigator.maxTouchPoints>0){ document.getElementById('cursor').style.display='none'; }
+
+    document.addEventListener('DOMContentLoaded', ()=>{
+      document.querySelectorAll('#home .grid-card').forEach((c,idx)=>setTimeout(()=>c.classList.add('show'), 300+idx*120));
+    });
+
+    (function(){
+      function handleFirstTab(e) {
+        if (e.key === 'Tab') document.body.classList.add('user-is-tabbing');
+      }
+      window.addEventListener('keydown', handleFirstTab, {once:true});
+    })();
+  </script>
 </body>
 </html>
